--- a/HTML_CSS_BOOTSTRAP/index.html
+++ b/HTML_CSS_BOOTSTRAP/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TASK</title>
+	<title>TASK HTML CSS BOOTSTRAP by Rohit Shaw</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -28,7 +28,6 @@
 	   		</div>
 		</div>
 	</div>
-
 	<div class="row">
 		<div class="col-md-12">
 			<div class="form-group">
@@ -41,7 +40,6 @@
 	   		</div>
 		</div>
 	</div>
-
 	<div class="row">
 		<div class="col-md-12">
 			<button type="button" class="btn btn-info btn-lg btn-block" id="color">SIGN IN</button>
@@ -87,21 +85,5 @@
 			<button type="button" class="btn-lg btn-block" id="epamlogin">< EPAM LOGIN ></button>
 		</div>
 	</div>
-	<!--<div class="row2">
-		<div class="col-md-12">
-			<div class="form-group ">
-		  		<label class="control-label " for="email">
-		   			Email
-		  		</label>
-		  		<div class="input-group">
-		   			<div class="input-group-addon">
-						<span class="glyphicon glyphicon-envelope"></span> 
-		   			</div>
-		   			<input class="form-control" id="email" name="email" type="text"/>
-		  		</div>
-		 	</div>
-		 </div>
-	</div>-->	 
-
 </body>
 </html>
